# disk-dynamic-scheduler

./: .gitignore  AllScriptsPerPathToData.ipynb  CMakeLists.txt  README.md  experiment2.sh  experiments.yml  script_experiment.sh
extlibs/Lotaru-traces/tasks_lotaru/: tasks_lotaru_asok01.csv  tasks_lotaru_asok02.csv  tasks_lotaru_c2.csv  tasks_lotaru_local.csv  tasks_lotaru_n1.csv  tasks_lotaru_n2.csv
extlibs/googletest/docs/: advanced.md  gmock_cook_book.md
extlibs/googletest/docs/reference/: testing.md
extlibs/memdag/src/: cluster.cpp  cluster.hpp  fifo.cpp  graph-algorithms.cpp  graph.cpp  graph.hpp  heap.cpp  maxmemory.cpp  memdag.cpp  sp-graph.hpp  sp-graphs.hpp  sp-ization.cpp  sp-recognition.cpp  sp-traversals.cpp  tree-opt-sched.cpp  tree.cpp
fonda_scheduler/: DynamicSchedulerRuntimeSystem.cpp  DynamicSchedulerScheduler.cpp  StaticScheduler.cpp  StaticSchedulerHEFT.cpp  Trash.cpp  common.cpp  dynSched.cpp  dynSchedDisk.cpp  dynSchedDiskPlanning.cpp  main.cpp
fonda_scheduler/io/: graphWeightsBuilder.cpp
include/fonda_scheduler/: DynamicSchedulerHeader.hpp  SchedulerHeader.hpp  algorithms.hpp  common.hpp  dynSched.hpp  dynSchedDisk.hpp  options.hpp  utils.hpp
include/fonda_scheduler/io/: graphWeightsBuilder.hpp
input/: debug.dot  machines.csv  machines_debug.csv  machines_few.csv  machines_homogeneous.csv  traces.csv
oldgit/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
oldgit/logs/refs/heads/: master
oldgit/logs/refs/remotes/origin/: master
oldgit/refs/heads/: master
scripts/: clean-files.sh  clean-lines.sh  run.sh
